프론트를 받아랏

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -66,57 +66,27 @@
     </nav>
 
     <!-- Intro Section -->
-    <section id="intro" class="intro-section">
+   <section id="intro" class="intro-section">
         <div class="container">
-            <div class="row">
-                <div class="col-lg-12">
-                    <h1>Scrolling Nav</h1>
-                    <p><strong>Usage Instructions:</strong> Make sure to include the <code>scrolling-nav.js</code>, <code>jquery.easing.min.js</code>, and <code>scrolling-nav.css</code> files. To make a link smooth scroll to another section on the page, give the link the <code>.page-scroll</code> class and set the link target to a corresponding ID on the page.</p>
-                    <a class="btn btn-default page-scroll" href="#about">Click Me to Scroll Down!</a>
-                </div>
-            </div>
             <!-- Projects Row -->
         <div class="row">
             <div class="col-md-6 portfolio-item">
                 <a href="#">
-                    <img class="img-responsive" src="http://placehold.it/700x400" alt="">
+                    <img class="img-responsive" src="https://t1.daumcdn.net/thumb/R1280x0/?fname=http://t1.daumcdn.net/brunch/service/user/2Xj/image/a83ZQWKa_spPZjF4B6EqUdsFL24" alt="">
                 </a>
                 <h3>
-                    <a href="#">Project One</a>
+                    <a href="#">여행</a>
                 </h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
+                <p>여행은 YOLO족의 특권!!</p>
             </div>
             <div class="col-md-6 portfolio-item">
                 <a href="#">
-                    <img class="img-responsive" src="http://placehold.it/700x400" alt="">
+                    <img class="img-responsive" src="http://img.insight.co.kr/upload/2014/12/15/ART141215120416.jpg" alt="">
                 </a>
                 <h3>
-                    <a href="#">Project Two</a>
+                    <a href="#">공부</a>
                 </h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
-            </div>
-        </div>
-        <!-- /.row -->
-
-        <!-- Projects Row -->
-        <div class="row">
-            <div class="col-md-6 portfolio-item">
-                <a href="#">
-                    <img class="img-responsive" src="http://placehold.it/700x400" alt="">
-                </a>
-                <h3>
-                    <a href="#">Project Three</a>
-                </h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
-            </div>
-            <div class="col-md-6 portfolio-item">
-                <a href="#">
-                    <img class="img-responsive" src="http://placehold.it/700x400" alt="">
-                </a>
-                <h3>
-                    <a href="#">Project Four</a>
-                </h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
+                <p>자신이 하고 싶은 공부는 스스로 찾아서!!</p>
             </div>
         </div>
         <!-- /.row -->
@@ -125,21 +95,44 @@
         <div class="row">
             <div class="col-md-6 portfolio-item">
                 <a href="#">
-                    <img class="img-responsive" src="http://placehold.it/700x400" alt="">
+                    <img class="img-responsive" src="http://image.hankookilbo.com/i.aspx?Guid=edaa93118f8147d5967202b568cff26d&Month=201612&size=640" alt="">
                 </a>
                 <h3>
-                    <a href="#">Project Five</a>
+                    <a href="#">사랑</a>
                 </h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
+                <P>사랑을 통해 자신이 살아있음을 느끼는 욜로</P>
             </div>
             <div class="col-md-6 portfolio-item">
                 <a href="#">
-                    <img class="img-responsive" src="http://placehold.it/700x400" alt="">
+                    <img class="img-responsive" src="http://pub.chosun.com/editor/cheditor_new/attach/IE1KGC6OQPOPFN5JCWIB.jpg" alt="">
                 </a>
                 <h3>
-                    <a href="#">Project Six</a>
+                    <a href="#">운동</a>
                 </h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
+                <p>운동과 함께하는 건강한 욜로족.</p>
+            </div>
+        </div>
+        <!-- /.row -->
+
+        <!-- Projects Row -->
+        <div class="row">
+            <div class="col-md-6 portfolio-item">
+                <a href="#">
+                    <img class="img-responsive" src="http://young.hyundai.com/upload/oldUnvs/uploadFiles/STR/_G0rXAMERpWuQ6VSyMOwh.jpg" alt="">
+                </a>
+                <h3>
+                    <a href="#">취미</a>
+                </h3>
+                <p>자신이 하고싶은 취미는 특권중 특권</p>
+            </div>
+            <div class="col-md-6 portfolio-item">
+                <a href="#">
+                    <img class="img-responsive" src="http://cfile211.uf.daum.net/image/254CCF4D527B45491AF41C" alt="">
+                </a>
+                <h3>
+                    <a href="#">자유로움</a>
+                </h3>
+                <p>내가 하고싶은것 내가 할수있는 것을 사랑하고 찾아나가는 것</p>
             </div>
         </div>
         <!-- /.row -->
@@ -183,6 +176,23 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
+                    <img src="http://www.venchitotampon.com/wp-content/uploads/2016/11/YOLO.png"></img><br>
+                  <h4><b>'You Only Live Once'의 약자.</b>
+<p>
+YOLO는 영미권 웹에서 You Only Live Once의 약자로 통하는 외국식 은어다.
+의역하면 "인생은 한 번 뿐이다"라는, 한국에서는 마치 카르페 디엠과 같이 멋있어보이는 뜻인 줄 알고 R=VD와 함께 중고등학생부터
+대학생까지의 젊은 층에서, 심지어는 언론이나 교회 칼럼에서까지하나님... 신나게 오용되는 말이다.
+
+사실 객기부리다 큰 사고로 이어지는 이런저런 일들이 워낙 많아서 영미권에서는 중2병 정도의 비웃음을 사는 밈이 되어 이미 유행이
+지난 말이 되어 가던 중 2017년 대한민국에서는 "욜로"로 음차되면서 각종 마케팅, 미디어 등에서 널리 쓰이기 시작했다. 
+
+YOLO하면 떠오르는 이미지를 정확히 보여주는 예로는 리로이 젠킨스나 영화 잭애스가 있다. YOLO를 실행하다가 목숨을 잃으면 
+다윈상 수상자도 될 수 있다. Suicide Silence의 곡으로 You Only Live Once가 있다. 
+
+The Lonely Island의 곡 중 YOLO라는 곡은 이 원 의미를 완전히 반대로 뒤집어 놓은 내용으로, "한 번 뿐인
+인생인데 안 죽고 오래오래 살겠다"는 내용이다.
+
+무한도전에도 이와 관련된 특집을 방영했다. </h4>  </p>
                     <h1>About Section</h1>
                 </div>
                 
@@ -195,9 +205,17 @@
     <section id="services" class="services-section">
         <div class="container">
             <div class="row">
-                <div class="col-lg-12">
-                    <h1>Services Section</h1>
+                    <p style="float:right;"><%= image_tag @yolo_play %> 
+                    </p>
+                    <H2>우리가 지금 부터 시작할 YOLO</H2>
+                    <BR><BR><BR>
+<button class="btn btn-default" type="submit">Button</button>
                 </div>
+                
+                <div class="col-lg-12">
+                </div>
+                    <h1>YOLO GAME!</h1>
+                    
             </div>
         </div>
     </section>
