로그인됫다 ㅠㅠ

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -58,7 +58,11 @@
                     <li>
                         <a class="page-scroll" href="#contact">Contact</a>
                     </li>
+                    <li>
+                        <a href="/users/sign_out">logout</a>
+                    </li>
                 </ul>
+                <%= current_user.email%>
             </div>
             <!-- /.navbar-collapse -->
         </div>
