--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -65,6 +65,7 @@
         <!-- /.container -->
     </nav>
 
+
     <!-- Intro Section -->
     <section id="intro" class="intro-section">
         <div class="container">
@@ -177,6 +178,7 @@
         <!-- /.row -->
         </div>
     </section>
+<%= link_to "Facebook Login", '/auth/facebook' %>
 
     <!-- About Section -->
     <section id="about" class="about-section">
